--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <p>Email: tedymarwanto12@gmail.com</p>
     <p>Instagram: @masted____</p>
     <p>Whatsapp: 089694892125</p>
+    <p>Alamat: Perum Graha Pemda, Jl. Citarum Blok B16 No 181, Simpangan, Cikarang Utara, Kab. Bekasi</p>
   </section>
 
   <footer>
